creacion de cuenta regresiva para el evento

--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <div class="hero">
             <!-- <video preload="auto" muted loop autoplay src="https://video.wixstatic.com/video/798141_fa84f549eaa94e668d4229504e4d5f89/720p/mp4/file.mp4"></video> -->
             <h1 id="myText"></h1>
+            <div class="countdown">
+                <div>
+                    <p id="days"></p>
+                    <span>Dias</span>
+                </div>
+                <div>
+                    <p id="hours"></p>
+                    <span>Horas</span>
+                </div>
+                <div>
+                    <p id="min"></p>
+                    <span>Minutos</span>
+                </div>
+                <div>
+                    <p id="sec"></p>
+                    <span>Segundos</span>
+                </div>
+            </div>
+            <button>
+                <a class="btn-confirmar" target="_blank" href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">Confirmar ahora</a>
+            </button>
         </div>
         <footer class="footer">
 
