creacion de la seccion info, mapa fecha hora vestimente etc

--- a/index.html
+++ b/index.html
@@ -42,8 +42,17 @@
                 <a class="btn-confirmar" target="_blank" href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">Confirmar ahora</a>
             </button>
         </div>
+        <div class="info">
+            <!-- <h2>Acompañame</h2> -->
+            <h4 class="infoT">Fecha 22/03/2025 hora 21:00</h4>
+            <h4 class="infoT">Vestimenta Formal</h4>
+            <h4 class="infoT">Confirmar asistencia hasta el 15 de marzo</h4>
+            <div class="mapa">
+                <h4>Lugar</h4>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.7234088564564!2d-56.35716202451257!3d-34.8380461699109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d0cb6549a517%3A0x2dd6c80d7395e816!2sJard%C3%ADn%20de%20Eventos!5e0!3m2!1ses!2suy!4v1739135850091!5m2!1ses!2suy" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
         <footer class="footer">
-
         </footer>
     </div>
     <!-- scrollReveal -->
