--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Box Icons -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -39,20 +41,36 @@
                 </div>
             </div>
             <button>
-                <a class="btn-confirmar" target="_blank" href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">Confirmar ahora</a>
+                <a class="btn-confirmar" target="_blank"
+                    href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">Confirmar ahora</a>
             </button>
         </div>
         <div class="info">
             <!-- <h2>Acompañame</h2> -->
-            <h4 class="infoT">Fecha 22/03/2025 hora 21:00</h4>
-            <h4 class="infoT">Vestimenta Formal</h4>
-            <h4 class="infoT">Confirmar asistencia hasta el 15 de marzo</h4>
+            <h4 class="infoT"><i class='bx bxs-calendar'></i>Fecha 22/03/2025 hora 21:00</h4>
+            <h4 class="infoT"><i class='bx bx-closet'></i>Vestimenta Formal</h4>
+            <h4 class="infoT"><i class='bx bxs-timer'></i>Confirmar asistencia hasta el 15 de marzo</h4>
+            <hr>
             <div class="mapa">
-                <h4>Lugar</h4>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.7234088564564!2d-56.35716202451257!3d-34.8380461699109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d0cb6549a517%3A0x2dd6c80d7395e816!2sJard%C3%ADn%20de%20Eventos!5e0!3m2!1ses!2suy!4v1739135850091!5m2!1ses!2suy" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <h4><i class='bx bx-been-here'></i>Lugar</h4>
+                <p>Chacra Jardin de Eventos</p>
+                <p>Camino Conde 4761</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.7234088564564!2d-56.35716202451257!3d-34.8380461699109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d0cb6549a517%3A0x2dd6c80d7395e816!2sJard%C3%ADn%20de%20Eventos!5e0!3m2!1ses!2suy!4v1739135850091!5m2!1ses!2suy"
+                    style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         <footer class="footer">
+            <i class='bx bx-laptop'>
+                <a target="_blank" href="https://www.jardindeventos.com/">Visita nuestro sitio</a>
+            </i>
+            <i class='bx bxl-instagram'>
+                <a target="_blank" href="https://www.instagram.com/jardin_de_eventos/">jardin_de_eventos</a>
+            </i>
+            <i class='bx bxl-facebook'>
+                <a target="_blank" href="https://www.facebook.com/chacrajardindeventos">Jardín de Eventos</a>
+            </i>
         </footer>
     </div>
     <!-- scrollReveal -->
