--- a/index.html
+++ b/index.html
@@ -24,29 +24,29 @@
             <h1 id="myText"></h1>
             <div class="countdown">
                 <div>
-                    <p id="days"></p>
+                    <p id="days">00</p>
                     <span>Dias</span>
                 </div>
                 <div>
-                    <p id="hours"></p>
+                    <p id="hours">00</p>
                     <span>Horas</span>
                 </div>
                 <div>
-                    <p id="min"></p>
+                    <p id="min">00</p>
                     <span>Minutos</span>
                 </div>
                 <div>
-                    <p id="sec"></p>
+                    <p id="sec">00</p>
                     <span>Segundos</span>
                 </div>
             </div>
-            <button>
                 <a class="btn-confirmar" target="_blank"
-                    href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">Confirmar ahora</a>
-            </button>
+                    href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">
+                    <button>Confirmar ahora</button>
+                </a>
+            
         </div>
         <div class="info">
-            <!-- <h2>Acompañame</h2> -->
             <h4 class="infoT"><i class='bx bxs-calendar'></i>Fecha 22/03/2025 hora 21:00</h4>
             <h4 class="infoT"><i class='bx bx-closet'></i>Vestimenta Formal</h4>
             <h4 class="infoT"><i class='bx bxs-timer'></i>Confirmar asistencia hasta el 15 de marzo</h4>
