ajuste en reset css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- normalize -->
+    <link rel="stylesheet" href="./css/normalize.css">
     <!-- Box Icons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- Fuentes de google -->
@@ -40,11 +42,10 @@
                     <span>Segundos</span>
                 </div>
             </div>
-                <a class="btn-confirmar" target="_blank"
-                    href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">
-                    <button>Confirmar ahora</button>
-                </a>
-            
+            <a class="btn-confirmar" target="_blank" href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">
+                <button>Confirmar ahora</button>
+            </a>
+
         </div>
         <div class="info">
             <h4 class="infoT"><i class='bx bxs-calendar'></i>Fecha 22/03/2025 hora 21:00</h4>
