--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         rel="stylesheet">
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="./css/estilos.css">
-    <title>Aithana</title>
+    <title>Aitana</title>
 </head>
 
 <body>
@@ -60,6 +60,36 @@
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3274.7234088564564!2d-56.35716202451257!3d-34.8380461699109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95a1d0cb6549a517%3A0x2dd6c80d7395e816!2sJard%C3%ADn%20de%20Eventos!5e0!3m2!1ses!2suy!4v1739135850091!5m2!1ses!2suy"
                     style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+        <div id="mensajes">
+            <h2>¡Déjame un mensaje!</h2>
+            <!-- <form id="formulario-mensaje">
+                <input type="text" id="nombre" placeholder="Tu nombre" required>
+                <textarea id="mensaje" placeholder="Tu mensaje" required></textarea>
+                <button type="submit">Enviar</button>
+            </form> -->
+            <div class="prueba">
+                <form id="myForm" onsubmit="submitForm()" target="_blank"
+                    action="https://formsubmit.co/josselinep830@gmail.com" method="POST">
+                    <div class="form-group">
+                        <div class="form-row">
+                            <div class="col">
+                                <input type="text" name="name" class="form-control" placeholder="Nombre completo"
+                                    required>
+                            </div>
+                            <div class="col">
+                                <input type="email" name="email" class="form-control" placeholder="E-mail" required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <textarea placeholder="Dejame un mensaje" class="form-control" name="message" rows="10"
+                            required></textarea>
+                    </div>
+                    <input type="hidden" name="_next" value="http://127.0.0.1:5500/index.html">
+                    <button type="submit" class="btn btn-lg btn-dark btn-block">Enviar</button>
+                </form>
             </div>
         </div>
         <footer class="footer">
