cambios en footer, iconos y enlaces a cuentas propias

--- a/index.html
+++ b/index.html
@@ -93,15 +93,13 @@
             </div>
         </div>
         <footer class="footer">
-            <i class='bx bx-laptop'>
-                <a target="_blank" href="https://www.jardindeventos.com/">Visita nuestro sitio</a>
+            <i class='bx bxl-github'>
+                <a target="_blank" href="https://github.com/NatanaelLeites/certificaciones">Natanael</a>
             </i>
-            <i class='bx bxl-instagram'>
-                <a target="_blank" href="https://www.instagram.com/jardin_de_eventos/">jardin_de_eventos</a>
+            <i class='bx bxl-linkedin'>
+                <a target="_blank" href="https://www.linkedin.com/in/natanael-leites-uruguay/">Natanael</a>
             </i>
-            <i class='bx bxl-facebook'>
-                <a target="_blank" href="https://www.facebook.com/chacrajardindeventos">Jardín de Eventos</a>
-            </i>
+            <p>© 2025 Natanael</p>
         </footer>
     </div>
     <!-- scrollReveal -->
