ajustes de color en cuenta

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     </a>
             </div>
             
-            <p>© 2025 Natanael</p>
+            <!-- <p>© 2025 Natanael</p> -->
         </footer>
     </div>
     <!-- scrollReveal -->
