--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-        <div class="carrousel">
+        <div class="carousel">
             <div id="carouselExampleControlsNoTouching" class="carousel slide" data-bs-touch="false">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -74,7 +74,7 @@
                         <img src="./img/fondo4.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/fondo5.jpeg" class="d-block w-100" alt="...">
+                        <img src="./img/fondo52.jpeg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/fondo6.jpeg" class="d-block w-100" alt="...">
