--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <h2>Regalos</h2>
             <i id="btn-cuenta" class='bx bx-tada bx-gift'></i>
             <div id="cuenta" class="cuenta-bancaria">
-                <p>Aitana Cáceres</p>
-                <p>Cuenta Prex</p>
-                <strong>1864445</strong>
+                <p>Aitana</p>
+                <p>Cuenta "banco"</p>
+                <strong>123456789</strong>
             </div>
 
         </div>
