--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <span>Segundos</span>
                 </div>
             </div>
-            <a class="btn-confirmar" target="_blank" href="https://wa.me/59899290533?text=*Yo%20estaré%20ahí%20soy*">
+            <a class="btn-confirmar" target="_blank" href="#">
                 <button>Confirmar ahora</button>
             </a>
 
